# python-garmin-connect

./: .env.example  .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pypi_publish.yml
garmin_connect/: app.py  configuration.py  constants.py  exceptions.py  http_client.py  repository.py  service.py  utils.py
src/: app.py  configuration.py  constants.py  service.py
tests/: test.py
