[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "example_package_YOUR_USERNAME_HERE"
version = "0.0.1"
authors = [
  { name="Mikita Hushtyn", email="mikita.hushtyn.dev@outlook.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mishtyun/python-garmin-connect/"
Issues = "https://github.com/mishtyun/python-garmin-connect/issues"
